Pushing converter, working with 8 bit precision, added comments

--- a/inde_x.html
+++ b/inde_x.html
@@ -16,6 +16,8 @@
 	    <br/>
 	    <a href="resolucao.php">Resolução de exemplos passo a passo.</a>
 	    <br/>
+	    <a href="reconstrucao.php">Conversão de Ponto Flutuante para Decimal</a>
+	    <br/>
 	    <br/>
 	</div>
     </div>
