--- a/reconstrucao.html
+++ b/reconstrucao.html
@@ -10,7 +10,8 @@
         ReconstructorFP
 	</h1>
 	<form method="post" action="#">
-		Digite um número na notação ponto flutuante:
+		Digite um número na notação  de ponto flutuante:
+		
 		<br/>
 		<input name="FPnum">
 		<br/>
